fix: flash message cause duplicate certical scrollbar
flex box mix-height is per default auto, causing a
duplicate scollbar when there was no engough size

--- a/app/assets/stylesheets/administration/side_menu.sass
+++ b/app/assets/stylesheets/administration/side_menu.sass
@@ -70,4 +70,5 @@
   .body-content
     flex-grow : 1
     height: 100%
+    min-height: 0
     position: relative
